# 10th_workshop_data_science

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
scripts/: build_submission_docx.py  compare_model_runs.py  run_prompt_v2_large_model_runs.ps1
src/pso/: evaluate_pso.py  predict_pso.py  pso_params_a100.json  report_eval.py  run_pso.py
src/ros_wildfire/: config.py  constants.py  utils.py
src/ros_wildfire/calib/: mapping.py  objective.py  pso_runner.py
src/ros_wildfire/data/: collate.py  datasets.py  discovery.py
src/ros_wildfire/eval/: metrics.py  reporting.py
src/ros_wildfire/io/: burn_maps.py  pkl_materialize.py  raster.py  weather.py
src/ros_wildfire/physics/: frontier.py  fuel_lookup.py  huygens.py  rothermel.py
src/ros_wildfire/viz/: plots.py
src/wildfire_llm_agent/: __init__.py  ablation.py  agent.py  array_ops.py  baselines.py  cli.py  context.py  data.py  guardrails.py  metrics.py  pixel_calibration.py  pso_adapter.py  rag.py  reasoners.py  renderer.py  schemas.py  selector_learning.py  selectors.py  synthetic.py
tests/: test_pipeline.py
wildfire_llm_agent/: __init__.py
