[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "wildfire-llm-agent"
version = "0.1.0"
description = "PSO-warm-started multimodal LLM agent scaffold for wildfire spread prediction experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pillow>=10",
]

[project.optional-dependencies]
geo = ["rasterio>=1.3"]
# Needed to run the bundled ros_wildfire Huygens/PSO physics warm-start
# (--warm-start pso). Not required for the synthetic demo, unit tests, or
# --warm-start placeholder.
pso = ["torch>=2.1", "rasterio>=1.3"]
dev = ["pytest>=8"]

[project.scripts]
wildfire-agent = "wildfire_llm_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
